--- a/src/Home.css
+++ b/src/Home.css
@@ -19,7 +19,7 @@ body {
 }
 
 .homerow1 {
-    margin-top: 200px;
+    margin-top: 0px;
 }
 
 /* Clear floats after the homecolumns */
@@ -54,7 +54,7 @@ body {
 }
 
 .flip-card-inner {
-    position: absolute;
+    /* position: absolute; */
     width: 100%;
     height: 200px;
     text-align: center;
@@ -90,4 +90,13 @@ body {
 h3 {
     text-align: center;
     padding-top: 40px;
+}
+.newimg {
+    width: 100%;
+    padding: 10px;
+}
+
+.newimg1 {
+    width: 100%;
+    padding: 10px;
 }
